<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ccc"
    tools:context=".SelectActivity">

  <Button
      android:id="@+id/goBtn"
      android:layout_width="60dp"
      android:layout_height="wrap_content"
      android:layout_marginStart="16dp"
      android:layout_marginTop="16dp"
      android:layout_marginEnd="16dp"
      android:layout_marginBottom="16dp"
      android:backgroundTint="@color/white"
      android:text="@string/go3"
      android:textColor="#757575"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.852"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.278"
      android:textSize="12sp"
      tools:ignore="MissingConstraints,DuplicateSpeakableTextCheck" />

  <Button
      android:id="@+id/goBtn1"
      android:layout_width="60dp"
      android:layout_height="wrap_content"
      android:layout_marginStart="16dp"
      android:layout_marginTop="16dp"
      android:layout_marginEnd="16dp"
      android:layout_marginBottom="16dp"
      android:backgroundTint="@color/white"
      android:text="@string/go2"
      android:textColor="#757575"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.852"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      android:textSize="12sp"
      app:layout_constraintVertical_bias="0.499" />

  <Button
      android:id="@+id/goBtn2"
      android:layout_width="60dp"
      android:layout_height="wrap_content"
      android:layout_marginStart="16dp"
      android:layout_marginTop="16dp"
      android:layout_marginEnd="16dp"
      android:layout_marginBottom="16dp"
      android:backgroundTint="@color/white"
      android:text="@string/go1"
      android:textColor="#757575"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.852"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.732"
      android:textSize="12sp"
      tools:ignore="MissingConstraints" />

  <Button
      android:id="@+id/goBtn3"
      android:layout_height="wrap_content"
      android:layout_marginStart="16dp"
      android:layout_marginTop="16dp"
      android:layout_width="60dp"
      android:layout_marginEnd="16dp"
      android:layout_marginBottom="16dp"
      android:backgroundTint="@color/white"
      android:text="@string/go"
      android:textColor="#757575"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.852"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/goBtn2"
      android:textSize="12sp"
      app:layout_constraintVertical_bias="1.0" />

  <Button
      android:id="@+id/btnnext"
      android:layout_width="98dp"
      android:layout_height="48dp"
      android:layout_marginStart="16dp"
      android:layout_marginTop="16dp"
      android:layout_marginEnd="16dp"
      android:layout_marginBottom="16dp"
      android:backgroundTint="@color/white"
      android:text="@string/next"
      android:textColor="#757575"
      android:textSize="10sp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="1.0"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.048"
      tools:ignore="SmallSp" />



</androidx.constraintlayout.widget.ConstraintLayout>